--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 .headie_one {
   color: blue;
 }
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.topnav a.active {
+  background-color: navy;
+  color: white;
+}
+.topnav a.redirect {
+  color: #4169e1;
+  float: right;
+  font-size: 1rem;
+}
+img {
+  height: 600px;
+  width: 1278px;
+}
