--- a/style.css
+++ b/style.css
@@ -55,3 +55,19 @@ body {
   bottom: 310px;
   right: 100px;
 }
+.tab_a table,
+th,
+td,
+tr:nth-child() {
+  position: relative;
+  border: 4px rgb(15, 14, 14);
+  width: 70%;
+  top: 100px;
+  background-color: #221ff1;
+}
+tr:nth-child(even) {
+  background-color: #101313;
+}
+.tab_a h2 {
+  top: 100px;
+}
